// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when mb prop passed in should add the correct bottom margin 1`] = `
.c2 ~ .c0 {
  margin-left: 16px;
}

.c3 ~ .c0 {
  margin-left: 16px;
}

.c4 ~ .c0 {
  margin-left: 16px;
}

.c5 ~ .c0 {
  margin-left: 16px;
}

.c6 ~ .c0 {
  margin-left: 16px;
}

.c7 ~ .c0 {
  margin-left: 16px;
}

.c8 ~ .c0 {
  margin-left: 16px;
}

.c9 ~ .c0 {
  margin-left: 16px;
}

.c10 ~ .c0 {
  margin-left: 16px;
}

.c11 ~ .c0 {
  margin-left: 16px;
}

.c12 ~ .c0 {
  margin-left: 16px;
}

.c13 ~ .c0 {
  margin-left: 16px;
}

.c14 ~ .c0 {
  margin-left: 16px;
}

.c15 ~ .c0 {
  margin-left: 16px;
}

.c16 ~ .c0 {
  margin-left: 16px;
}

.c17 ~ .c0 {
  margin-left: 16px;
}

.c18 ~ .c0 {
  margin-left: 16px;
}

.c19 ~ .c0 {
  margin-left: 16px;
}

.c20 ~ .c0 {
  margin-left: 16px;
}

.c21 ~ .c0 {
  margin-left: 16px;
}

.c22 ~ .c0 {
  margin-left: 16px;
}

.c23 ~ .c0 {
  margin-left: 16px;
}

.c24 ~ .c0 {
  margin-left: 16px;
}

.c25 ~ .c0 {
  margin-left: 16px;
}

.c26 ~ .c0 {
  margin-left: 16px;
}

.c27 ~ .c0 {
  margin-left: 16px;
}

.c28 ~ .c0 {
  margin-left: 16px;
}

.c29 ~ .c0 {
  margin-left: 16px;
}

.c30 ~ .c0 {
  margin-left: 16px;
}

.c31 ~ .c0 {
  margin-left: 16px;
}

.c32 ~ .c0 {
  margin-left: 16px;
}

.c33 ~ .c0 {
  margin-left: 16px;
}

.c34 ~ .c0 {
  margin-left: 16px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 ~ .c0 {
  margin-left: 16px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:hover .c35 {
  color: #FFFFFF;
}

.c1.c1.c1 {
  margin-bottom: 32px;
}

.c1 .c35 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c1 .c35 svg {
  margin-top: 0;
}

<button
  className="c0 c1"
/>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c3:hover {
  color: #1E861E;
  background-color: transparent;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c4 ~ .c0 {
  margin-left: 16px;
}

.c4:hover .c2 {
  color: #FFFFFF;
}

.c4 .c2 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c4 .c2 svg {
  margin-top: 0;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 ~ .c0 {
  margin-left: 16px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:hover .c2 {
  color: #FFFFFF;
}

.c1 .c2 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c1 .c2 svg {
  margin-top: 0;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
  type="button"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  <span
    className="c2 c3"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c3 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c3:hover {
  color: #1E861E;
  background-color: transparent;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 ~ .c0 {
  margin-left: 16px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:hover .c2 {
  color: #FFFFFF;
}

.c1 .c2 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c1 .c2 svg {
  margin-top: 0;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
  type="button"
>
  <span
    className="c2 c3"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</button>
`;
